[package]
name = "rosu"
version = "0.1.0"
authors = ["tsunyoku <tsunyoku@gmail.com>", "RealistikDash <realistikdash@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
ntex = { version = "0.5.8", features= ["tokio"] }
bincode = "0.7"
byteorder = "1.0"
serde = "0.9"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "mysql", "macros"] }
bcrypt = "0.10.1"